MonetDB/tests/BugsViaSourgeforce/Tests/ID.914935.stable.out.64bit
stdout of test 'ID.914935` in directory 'tests/BugsViaSourgeforce` itself:


# 22:18:29 >  
# 22:18:29 >  Mtimeout -timeout 60 Mserver "--config=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/etc/monet.conf" --debug=10 --set "monet_mod_path=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/lib/MonetDB" --set "gdk_dbfarm=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/var/MonetDB/dbfarm" --set "sql_logdir=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/var/MonetDB/log" --set mapi_port=46316 --set sql_port=58861 --set monet_prompt= --trace --dbname=mTests_tests_BugsViaSourgeforce  < ID.914935.milS
# 22:18:29 >  

# Monet Database Server V4.3.16_rc05
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit; dynamically linked.

VAR b := new(int,int);
VAR n := 10;
VAR i := 0;

WHILE (i < n) {
	i :+= 1;
	b.insert(i,i);
}
b.access(BAT_READ);

print(rangesplit(b,0));
!ERROR: BAThashsplit: number of ranges must not be less than 1!
!ERROR: CMDrangesplit: operation failed.
!ERROR: interpret_params: print(param 1): evaluation error.
print(rangesplit(b,-1));
!WARNING: BATrangesplit: reduced number of ranges (18446744073709551615) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 1,	  <tmp_40>	  ]
[ 2,	  <tmp_41>	  ]
[ 3,	  <tmp_42>	  ]
[ 4,	  <tmp_43>	  ]
[ 5,	  <tmp_44>	  ]
[ 6,	  <tmp_45>	  ]
[ 7,	  <tmp_46>	  ]
[ 8,	  <tmp_47>	  ]
[ 9,	  <tmp_50>	  ]
[ nil,	  <tmp_51>	  ]
print(rangesplit(b,1));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ nil,	  <tmp_32>	  ]
print(rangesplit(b,2));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 5,	  <tmp_52>	  ]
[ nil,	  <tmp_53>	  ]
print(rangesplit(b,5));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 2,	  <tmp_54>	  ]
[ 4,	  <tmp_55>	  ]
[ 6,	  <tmp_56>	  ]
[ 8,	  <tmp_57>	  ]
[ nil,	  <tmp_60>	  ]
print(rangesplit(b,n));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 1,	  <tmp_61>	  ]
[ 2,	  <tmp_62>	  ]
[ 3,	  <tmp_63>	  ]
[ 4,	  <tmp_64>	  ]
[ 5,	  <tmp_65>	  ]
[ 6,	  <tmp_66>	  ]
[ 7,	  <tmp_67>	  ]
[ 8,	  <tmp_70>	  ]
[ 9,	  <tmp_71>	  ]
[ nil,	  <tmp_72>	  ]
print(rangesplit(b,n + 1));
!WARNING: BATrangesplit: reduced number of ranges (11) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 1,	  <tmp_73>	  ]
[ 2,	  <tmp_74>	  ]
[ 3,	  <tmp_75>	  ]
[ 4,	  <tmp_76>	  ]
[ 5,	  <tmp_77>	  ]
[ 6,	  <tmp_100>	  ]
[ 7,	  <tmp_101>	  ]
[ 8,	  <tmp_102>	  ]
[ 9,	  <tmp_103>	  ]
[ nil,	  <tmp_104>	  ]

print(hashsplit(b,0));
!ERROR: BAThashsplit: number of ranges must not be less than 1!
!ERROR: CMDhashsplit: operation failed.
!ERROR: interpret_params: print(param 1): evaluation error.
print(hashsplit(b,-1));
!WARNING: BAThashsplit: reduced number of ranges (18446744073709551615) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_36>	  ]
[ 1,	  <tmp_37>	  ]
[ 2,	  <tmp_105>	  ]
[ 3,	  <tmp_106>	  ]
[ 4,	  <tmp_107>	  ]
[ 5,	  <tmp_110>	  ]
[ 6,	  <tmp_111>	  ]
[ 7,	  <tmp_112>	  ]
[ 8,	  <tmp_113>	  ]
[ 9,	  <tmp_114>	  ]
print(hashsplit(b,2));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_114>	  ]
[ 1,	  <tmp_113>	  ]
print(hashsplit(b,5));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_113>	  ]
[ 1,	  <tmp_114>	  ]
[ 2,	  <tmp_112>	  ]
[ 3,	  <tmp_111>	  ]
[ 4,	  <tmp_110>	  ]
print(hashsplit(b,1));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_32>	  ]
print(hashsplit(b,n));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_110>	  ]
[ 1,	  <tmp_111>	  ]
[ 2,	  <tmp_112>	  ]
[ 3,	  <tmp_114>	  ]
[ 4,	  <tmp_113>	  ]
[ 5,	  <tmp_107>	  ]
[ 6,	  <tmp_106>	  ]
[ 7,	  <tmp_105>	  ]
[ 8,	  <tmp_37>	  ]
[ 9,	  <tmp_36>	  ]
print(hashsplit(b,n + 1));
!WARNING: BAThashsplit: reduced number of ranges (11) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_36>	  ]
[ 1,	  <tmp_37>	  ]
[ 2,	  <tmp_105>	  ]
[ 3,	  <tmp_106>	  ]
[ 4,	  <tmp_107>	  ]
[ 5,	  <tmp_113>	  ]
[ 6,	  <tmp_114>	  ]
[ 7,	  <tmp_112>	  ]
[ 8,	  <tmp_111>	  ]
[ 9,	  <tmp_110>	  ]
quit();

# 22:21:26 >  
# 22:21:26 >  Done.
# 22:21:26 >  

